nominatim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nominatim-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kleidir-nominatim.eastus.cloudapp.azure.com
    secretName: nominatim-tls
  rules:
  - host: kleidir-nominatim.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nominatim-service
            port:
              number: 80
